--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,23 @@
           <artifactId>hibernate-c3p0</artifactId>
           <version>3.6.9.Final</version>
       </dependency>
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-validator</artifactId>
+          <version>5.1.2.Final</version>
+      </dependency>
 
       <dependency>
           <groupId>javassist</groupId>
           <artifactId>javassist</artifactId>
           <version>3.13.0.GA</version>
+      </dependency>
+
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+          <scope>provided</scope>
       </dependency>
 
   </dependencies>
