--- a/pom.xml
+++ b/pom.xml
@@ -85,30 +85,38 @@
           <scope>provided</scope>
       </dependency>
 
-      <!--<dependency>-->
-          <!--<groupId>javax.servlet</groupId>-->
-          <!--<artifactId>jsp-api</artifactId>-->
-          <!--<version>2.0</version>-->
-          <!--<scope>provided</scope>-->
-      <!--</dependency>-->
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jsp-api</artifactId>
+          <version>2.0</version>
+          <scope>provided</scope>
+      </dependency>
 
       <dependency>
           <groupId>jstl</groupId>
           <artifactId>jstl</artifactId>
           <version>1.2</version>
+          <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>javax.el</groupId>
+          <artifactId>javax.el-api</artifactId>
+          <version>2.2.4</version>
+          <scope>provided</scope>
       </dependency>
 
   </dependencies>
   <build>
-    <pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-            </plugin>
-        </plugins>
-    </pluginManagement>
+      <pluginManagement>
+          <plugins>
+              <plugin>
+                  <groupId>org.apache.tomcat.maven</groupId>
+                  <artifactId>tomcat7-maven-plugin</artifactId>
+                  <version>2.2</version>
+              </plugin>
+          </plugins>
+      </pluginManagement>
     <finalName>OnlineMall</finalName>
     <resources>
         <resource>
