--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <!--slf4j依赖end-->
 
       <dependency>
+          <groupId>net.coobird</groupId>
+          <artifactId>thumbnailator</artifactId>
+          <version>0.4.7</version>
+      </dependency>
+
+      <dependency>
           <groupId>javax.servlet</groupId>
           <artifactId>javax.servlet-api</artifactId>
           <version>3.1.0</version>
