--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <log4j.version>1.2.17</log4j.version>
         <servlet.version>3.1.0</servlet.version>
         <mysql.version>5.1.31</mysql.version>
+        <fastjson.version>1.2.3</fastjson.version>
     </properties>
 
     <dependencies>
@@ -133,6 +134,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
 
     </dependencies>
