--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>OnlineMall</groupId>
     <artifactId>OnlineMall</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>0.1</version>
+    <modules>
+        <module>Manage</module>
+        <module>Shelf</module>
+        <module>Common</module>
+    </modules>
     <name>OnlineMall</name>
 
     <properties>
@@ -203,15 +208,6 @@
                     <compilerArgument>-Xlint:-options</compilerArgument>
                     <meminitial>256m</meminitial>
                     <maxmem>1024m</maxmem>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <path>/</path>
-                    <port>8080</port>
                 </configuration>
             </plugin>
         </plugins>
